nav link on mobile fixed

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -93,7 +93,6 @@
         padding-inline: 20px;
         flex-direction: row;
         align-items: center;
-        gap: 20px;
         background: rgba(8, 21, 73, 0.35);
         border-radius: 16px;
         box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
